# summarizer

./: 00_summarizer.ipynb  README.md  Untitled.ipynb  _quarto.yml  index.ipynb  pyproject.toml  settings.ini
